# Mus

./: BUILD_MACOS.md  BUILD_WINDOWS.md  mus_simulator.spec  pyproject.toml  requirements.txt  setup.cfg
.gitea/workflows/: build.yml  ci.yml  lint.yml  notebook.yml  release.yml  test.yml
data/: manos_mus.csv  matriz_probabilidades.csv
docs/: gitea-actions.md
scripts/: build_macos.sh  build_windows.ps1
src/: analysis.py  main.py
src/data/: hands.py
src/models/: monte_carlo.py  mus_game.py
src/utils/: data_formatter.py
tests/: test_data_formatter.py  test_integracion.py  test_monte_carlo.py  test_mus_game.py
